--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group">
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<main id="main" class="wp-block-group">
     <!-- wp:heading -->
     <h1>404: Page Not Found</h1>
     <!-- /wp:heading -->
@@ -15,7 +15,7 @@
         <a class="wp-block-button__link" href="/">Return to Homepage</a>
     </div>
     <!-- /wp:button -->
-</div>
+</main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
