--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -1,5 +1,6 @@
 <!-- wp:template-part {"slug":"header","theme":"dahlia","area":"uncategorized"} /-->
-
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<main id="main" class="wp-block-group">
 <!-- wp:columns {"style":{"spacing":{"blockGap":{"left":"var:preset|spacing|40"}}}} -->
 <div class="wp-block-columns"><!-- wp:column {"width":"20%","style":{"spacing":{"padding":{"right":"var:preset|spacing|40","left":"var:preset|spacing|40","top":"var:preset|spacing|40","bottom":"var:preset|spacing|40"},"blockGap":"var:preset|spacing|40"},"shadow":"none","border":{"top":{"width":"0px","style":"none"},"right":{"color":"var:preset|color|grey-02","width":"1px"},"bottom":{"width":"0px","style":"none"},"left":{"width":"0px","style":"none"}}}} -->
     <div class="wp-block-column" style="border-top-style:none;border-top-width:0px;border-right-color:var(--wp--preset--color--grey-02);border-right-width:1px;border-bottom-style:none;border-bottom-width:0px;border-left-style:none;border-left-width:0px;padding-top:var(--wp--preset--spacing--40);padding-right:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--40);padding-left:var(--wp--preset--spacing--40);box-shadow:none;flex-basis:20%"><!-- wp:shortcode -->
@@ -28,4 +29,4 @@
     <div style="height:130px" aria-hidden="true" class="wp-block-spacer"></div>
     <!-- /wp:spacer --></div>
     <!-- /wp:column --></div>
-    <!-- /wp:columns -->
+    <!-- /wp:columns --></main>
