--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -27,19 +27,30 @@ $white: var(--wp--preset--color--color-primary-00, #FFFAFA);
 $gradient-0607: linear-gradient(128deg, $primary-06 5.2%, $primary-07 95.51%);
 
 @mixin visually-hidden {
-	border: 0 !important;
-	clip: rect(1px, 1px, 1px, 1px) !important;
-	/* 1 */
-	-webkit-clip-path: inset(50%) !important;
-	clip-path: inset(50%) !important;
-	/* 2 */
-	height: 1px !important;
-	margin: -1px !important;
-	overflow: hidden !important;
-	padding: 0 !important;
-	position: absolute !important;
-	width: 1px !important;
-	white-space: nowrap !important;
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0,0,0,0);
+	border: 0;
+}
+
+.sr-only-focusable {
+	@include visually-hidden;
+
+	&:focus {
+		position: static !important;
+		width: auto !important;
+		height: auto !important;
+		padding: 1rem;
+		margin: 0.5rem;
+		background: #000;
+		color: #fff;
+		z-index: 1000;
+		text-decoration: underline;
+	}
 }
 
 $screen-xxl: 1400px;
