--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<div class="wp-block-group">
+<main id="main" class="wp-block-group">
     <!-- wp:post-title /-->
     <!-- wp:post-content /-->
-</div>
+</main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
