--- a/assets/sass/blocks/_navigation.scss
+++ b/assets/sass/blocks/_navigation.scss
@@ -1,30 +1,35 @@
 @use '../base/vars' as *;
 
-.wp-block-navigation {
-	&__responsive-dialog {
-		@media(max-width:$screen-lg) {
-			max-height: 100%;
+/* ------------------------------
+   Responsive Dialog Container
+------------------------------ */
+#site-header{
+	.wp-block-navigation__responsive-dialog {
+		@media (max-width: $screen-lg) {
 			position: fixed;
-			width: 100%;
 			top: 0;
+			width: 100%;
+			max-height: 100%;
 			overflow: scroll;
 		}
 	}
 
-	&__responsive-container {
+	/* ------------------------------
+	Responsive Container (Botons + Llista)
+	------------------------------ */
+	.wp-block-navigation__responsive-container {
 
 		&-open,
 		&-close {
-			@media(max-width:$screen-lg) {
+			@media (max-width: $screen-lg) {
+				top: auto;
 				position: fixed;
 				bottom: 1rem;
 				right: 1rem;
-				top: auto;
 				background-color: $primary-06;
 				padding: .8rem;
 				border-radius: 1rem;
 				color: $white;
-				height: auto;
 				z-index: 999;
 
 				svg {
@@ -41,29 +46,25 @@
 					}
 				}
 			}
-
 		}
 
 		&-content {
-			@media(min-width:$screen-lg) {
-				li {
-					&.has-child {
-						.wp-block-navigation__submenu-container {
-							border-radius: 10px;
-							overflow: hidden !important;
-						}
-					}
+
+			// Desktop submenu styling
+			@media (min-width: $screen-lg) {
+				li.has-child .wp-block-navigation__submenu-container {
+					border-radius: 10px;
+					overflow: hidden !important;
 				}
 			}
 
-			@media(max-width:$screen-lg) {
+			// Mobile layout
+			@media (max-width: $screen-lg) {
 				text-align: center;
 				padding-bottom: 2rem;
 
 				ul {
-
 					width: 100%;
-
 				}
 
 				li {
@@ -72,28 +73,25 @@
 					.wp-block-navigation-item__content {
 						width: 100%;
 						text-align: left;
-						padding: .7rem 1.3rem !important;
+						padding: 1.3rem 1.3rem !important;
 						font-size: 1.2rem;
 
-						@media(min-width:$screen-lg) {
+						@media (min-width: $screen-lg) {
 							font-size: 1rem;
 						}
 					}
 
-					&.has-child {
-						.wp-block-navigation__submenu-container {
-							width: 100% !important;
-							padding-top: 1rem !important;
+					&.has-child .wp-block-navigation__submenu-container {
+						width: 100% !important;
+						padding-top: 1rem !important;
 
-							li.wp-block-navigation-item {
-								border-left: 2px solid $primary-06;
-							}
+						li.wp-block-navigation-item {
+					
 						}
 					}
-
 				}
 
-				>div[class*="wp-block-"] {
+				>div[class*='wp-block-'] {
 					justify-content: center;
 					width: 100%;
 
@@ -105,46 +103,78 @@
 			}
 		}
 	}
-}
 
+	/* ------------------------------
+	Ítems de menú (estils comuns)
+	------------------------------ */
+	.wp-block-navigation .wp-block-navigation-item {
+		&.current-menu-item>a {
+			border-style: solid;
+			border-color: $primary-06;
+			border-width: 0rem;
+			border-left-width:.4rem;
 
-// Responsive styles for the navigation block
-@media (max-width: $screen-lg) {
+			@media (min-width: ($screen-lg + 1)) {
+				border-bottom-width: .2rem;
+				border-left-width:0rem;
+			}
+		}
 
-	// Força el menú a comportar-se com a "overlay" (estil mòbil)
-	.wp-block-navigation {
-		--navigation-layout: overlay;
-		row-gap: 0;
+		&__content {
+			padding-top: 1.2rem;
+			padding-bottom: 1rem;
+			border-bottom: .2rem solid transparent;
+			transition: border 0.3s ease;
 
-		&__responsive-container {
+			&:hover {
+				border-bottom: 3px solid $primary-06;
+			}
+		}
+	}
+
+	/* ------------------------------
+	Responsive: Mobile (≤ $screen-lg)
+	------------------------------ */
+	@media (max-width: $screen-lg) {
+		.wp-block-navigation {
+			--navigation-layout: overlay;
+			row-gap: 0;
+			border-top: 1px solid $grey-01;
+			
+
+			&__responsive-container {
+				display: none !important;
+
+				&.is-menu-open {
+					display: flex !important;
+					flex-direction: column;
+				}
+
+				&-open {
+					display: block !important;
+				}
+			}
+
+			&-item {
+				border-bottom: 1px solid $grey-01;
+				&_content {
+					// Empty: kept for future overrides if needed
+				}
+			}
+		}
+	}
+
+	/* ------------------------------
+	Responsive: Desktop (≥ $screen-lg + 1)
+	------------------------------ */
+	@media (min-width: ($screen-lg + 1)) {
+		.wp-block-navigation__responsive-container-open {
 			display: none !important;
-
-			&.is-menu-open {
-				display: flex !important;
-				flex-direction: column;
-			}
-
-			&-open {
-				display: block !important;
-			}
 		}
-		&-item{
-			&_content {
-		
-			}
+
+		.wp-block-navigation__responsive-container {
+			display: flex !important;
+			flex-direction: row;
 		}
-	}
-}
-
-// A desktop, amaga el botó de menú
-@media (min-width: ($screen-lg + 1)) {
-	.wp-block-navigation__responsive-container-open {
-		display: none !important;
-	}
-
-	// Mostra el menú directament, com a menú horitzontal
-	.wp-block-navigation__responsive-container {
-		display: flex !important;
-		flex-direction: row;
 	}
 }
