--- a/assets/sass/base/_icons.scss
+++ b/assets/sass/base/_icons.scss
@@ -22,6 +22,10 @@
     width: 1.25rem;
     height: 1.25rem;
   }
+  &.di-medium{
+    width: 1.70rem;
+    height: 1.70rem;
+  }
   &.di-large{
     width: 2rem;
     height: 2rem;
