--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,7 @@
 @use 'base/icons';
 @use 'base/base';
 @use 'base/animations';
+@use 'base/responsive';
 @use 'layout/header';
 @use 'layout/footer';
 @use 'layout/grid';
